.vr-list-item-clickable class customization
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42573

--- a/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
+++ b/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
@@ -2702,6 +2702,15 @@ vr-columns[datalistitem]>div[class^="col"] {
     display: inline-block;
     white-space:normal;
 }
+
+.vr-list-item-clickable>vr-columns>div[class^="col"]>.list-group-item{    
+   cursor: pointer !important;
+   transition: all .2s ease-in-out;
+}
+.vr-list-item-clickable>vr-columns>div[class^="col"]>.list-group-item:hover{    
+    transform: scale(1.02);
+    box-shadow: 0px 5px 0px #999, 0px 5px 5px #999;
+}
 /*start of vr-cellviewer*/
 .vr-cellviewer-watermark {
     cursor: pointer;
