--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/RouteSettings/Templates/QualityConfigurationEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/RouteSettings/Templates/QualityConfigurationEditor.html
@@ -1,25 +1,28 @@
-﻿<div vr-modalcontent ng-controller="QualityConfigurationEditorController" vr-loader="scopeModel.isLoading" width="'80%'">
+﻿<div vr-modalcontent ng-controller="WhS_Routing_QualityConfigurationEditorController" vr-loader="scopeModel.isLoading" width="'80%'">
     <vr-modalbody>
         <vr-form name="formQualityConfigurationEditor">
             <vr-tabs>
                 <vr-tab header="'Definition'">
                     <vr-row>
-                        <vr-columns width="1/2row">
+                        <vr-columns width="1/4row">
                             <vr-textbox value="scopeModel.qualityConfigurationyName" label="Name" isrequired="true"></vr-textbox>
                         </vr-columns>
                     </vr-row>
                 </vr-tab>
                 <vr-tab header="'Time Settings'">
-                    <vr-row>
-                        <vr-columns width="1/2row">
-                            <vr-common-timeperiod normal-col-num="6" on-ready="scopeModel.onTimeperiodReady" isrequired="true"></vr-common-timeperiod>
-                        </vr-columns>
-                    </vr-row>
+                    <vr-common-timeperiod normal-col-num="3" on-ready="scopeModel.onTimeperiodReady" isrequired="true"></vr-common-timeperiod>
                 </vr-tab>
                 <vr-tab header="'Expression'">
                     <vr-row>
                         <vr-columns width="fullrow">
                             <vr-datalist maxitemsperrow="6" datasource="scopeModel.qualityConfigurationFields" onitemclicked="scopeModel.qualityConfigurationFieldClicked">
+                                {{dataItem.Title}}
+                            </vr-datalist>
+                        </vr-columns>
+                    </vr-row>
+                    <vr-row>
+                        <vr-columns width="fullrow">
+                            <vr-datalist maxitemsperrow="6" datasource="scopeModel.qualityConfigurationSignsFields" onitemclicked="scopeModel.qualityConfigurationFieldClicked">
                                 {{dataItem.Title}}
                             </vr-datalist>
                         </vr-columns>
