--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/RouteSettings/Templates/RouteQualityConfigurationTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/RouteSettings/Templates/RouteQualityConfigurationTemplate.html
@@ -1,11 +1,13 @@
-﻿<vr-columns width="fullrow">
-    <vr-columns width="fullrow">
-        <vr-button type="Add" data-onclick="scopeModel.addQualityConfiguration" standalone></vr-button>
-        <vr-validator validate="scopeModel.isValid()">
-            <vr-datagrid datasource="scopeModel.datasource" norowhighlightonclick="true" menuactions="scopeModel.gridMenuActions" maxheight="300px"
-                         on-ready="scopeModel.onGridReady" enabledraggablerow="true" ondeleterow="    scopeModel.removeQualityConfiguratio" hidegridmenu>
-                <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'" widthfactor="10"></vr-datagridcolumn>
-            </vr-datagrid>
-        </vr-validator>
-    </vr-columns>
-</vr-columns>
+﻿<vr-button type="Add" data-onclick="scopeModel.addQualityConfiguration" standalone></vr-button>
+<vr-validator validate="scopeModel.isValid()">
+    <vr-datagrid datasource="scopeModel.datasource" norowhighlightonclick="true" menuactions="scopeModel.gridMenuActions" maxheight="300px"
+                 on-ready="scopeModel.onGridReady" hidegridmenu >
+        <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'" widthfactor="15" disablesorting></vr-datagridcolumn>
+        <vr-datagridcolumn isfielddynamic="true" headertext="'Active'"  widthfactor="10" disablesorting">
+            <vr-icon icontype="dataItem.Entity.IsActive"></vr-icon>
+        </vr-datagridcolumn>
+        <vr-datagridcolumn isfielddynamic="true" headertext="'Default'"  widthfactor="10" disablesorting>
+            <vr-icon icontype="dataItem.Entity.IsDefault"></vr-icon>
+        </vr-datagridcolumn>
+    </vr-datagrid>
+</vr-validator>
