--- a/Vanrise/Code/Vanrise.Common.Web/Common/Directives/VRTimePeriod/MainExtensions/Templates/LastTimeDirectiveTemplate.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Directives/VRTimePeriod/MainExtensions/Templates/LastTimeDirectiveTemplate.html
@@ -1,7 +1,7 @@
 ﻿<vr-row>
-     <vr-common-timeunit-selector on-ready="scopeModel.onTimeUnitReady" isrequired="true" hideremoveicon="true" normal-col-num="6"></vr-common-timeunit-selector>
-
-    <vr-columns width="1/2row">
+    <vr-common-timeunit-selector on-ready="scopeModel.onTimeUnitReady" isrequired="true" hideremoveicon="true" normal-col-num="3"></vr-common-timeunit-selector>
+    <vr-common-startingfrom-selector on-ready="scopeModel.onStartingfromReady" isrequired="true" hideremoveicon="true" normal-col-num="3"></vr-common-startingfrom-selector>
+    <vr-columns width="1/4row">
         <vr-textbox value="scopeModel.timeValue" type="number" label="Time Value" minvalue="0" decimalprecision="0" isrequired="true"></vr-textbox>
     </vr-columns>
 </vr-row>
