--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Views/Runtime/GenerateInvoiceEditor.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Views/Runtime/GenerateInvoiceEditor.html
@@ -3,6 +3,8 @@
         <vr-form name="formGenericInvoiceEditor">
             <vr-validator validate="scopeModel.validateForm()">
                 <vr-row removeline>
+                    <vr-invoice-accountstatus-selector hideremoveicon on-ready="scopeModel.onAccountStatusSelectorReady" normal-col-num="4" vr-disabled="scopeModel.isEditMode" onselectionchanged="scopeModel.onAccountStatusSelectionChanged"></vr-invoice-accountstatus-selector>
+
                     <vr-directivewrapper vr-disabled="scopeModel.isEditMode" directive="scopeModel.invoiceTypeEntity.InvoicePartnerManager.PartnerSelector" on-ready="scopeModel.onPartnerSelectorReady" normal-col-num="4" isrequired="true"></vr-directivewrapper>
                     <vr-columns width="1/3row">
                         <vr-datetimepicker type="date" label="Issue Date" value="scopeModel.issueDate" isrequired="true"></vr-datetimepicker>
