--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Extensions/CostCalculation/Templates/CostColumnsTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Extensions/CostCalculation/Templates/CostColumnsTemplate.html
@@ -2,12 +2,12 @@
     <vr-columns width="fullrow">
         <vr-row>
             <vr-columns width="fullrow">
-                <vr-toolbox label="Cost Calculation Method"
+                <vr-toolbox medium label="Cost Calculation Method"
                             datasource="ctrl.templates"
                             selectedvalues="ctrl.selectedTemplate"
                             datavaluefield="ExtensionConfigurationId"
                             datatextfield="Title"
-                            groupname="{{ctrl.dragdropGroupCorrelation.getGroupName()}}" >
+                            groupname="{{ctrl.dragdropGroupCorrelation.getGroupName()}}">
                 </vr-toolbox>
             </vr-columns>
         </vr-row>
