Refactoring financial account and implementing new city account part for invoice serial number and implementing exclude taxes
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42643

--- a/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Directives/Account/Part/Runtime/Templates/AccountTypePartCompanyExtendedInfoRuntimeTemplate.html
+++ b/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Directives/Account/Part/Runtime/Templates/AccountTypePartCompanyExtendedInfoRuntimeTemplate.html
@@ -10,6 +10,9 @@
             <vr-textbox value="scopeModel.gPSiteID" label="GP Site ID"></vr-textbox>
         </vr-columns>
         <vr-columns width="1/2row">
+            <vr-switch value="scopeModel.excludeTaxes" label="Exclude Taxes"></vr-switch>
+        </vr-columns>
+        <vr-columns width="1/2row">
             <retail-multinet-accounttype-selector on-ready="scopeModel.onAccountTypeSelectorReady"></retail-multinet-accounttype-selector>
         </vr-columns>
     </vr-row>
