--- a/Vanrise/Code/Vanrise.Common.Web/Common/Views/City/CityEditor.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Views/City/CityEditor.html
@@ -5,6 +5,9 @@
                 <vr-columns width="1/2row">
                     <vr-textbox value="name" label="Name" isrequired></vr-textbox>
                 </vr-columns>
+                <vr-columns width="1/2row">
+                    <vr-textbox value="abbreviation" label="Abbreviation" isrequired></vr-textbox>
+                </vr-columns>
                 <span vr-disabled="disableCountry">
                     <vr-columns width="1/2row" haschildcolumns>
                         <vr-common-country-selector on-ready="onCountryDirectiveReady" isrequired="true" onselectionchanged="onCountrySelectionChanged" showaddbutton></vr-common-country-selector>
