--- a/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Views/BEParentChildRelation/BEParentChildRelationEditor.html
+++ b/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Views/BEParentChildRelation/BEParentChildRelationEditor.html
@@ -1,7 +1,6 @@
 ﻿<div vr-modalcontent ng-controller="VR_GenericData_BEParentChildRelationEditorController" vr-loader="scopeModel.isLoading" width="'50%'">
     <vr-modalbody>
         <vr-form name="formProductEditor">
-
             <vr-tabs>
                 <vr-tab header="'Definition'">
                     <vr-row>
@@ -14,7 +13,7 @@
                             <vr-genericdata-businessentity-selector on-ready="scopeModel.onChildBESelectorReady"
                                                                     onselectionchanged="scopeModel.onChildBESelectionChanged"
                                                                     selectedvalues="scopeModel.selectedChildBE"
-                                                                    customlabel="Child" normal-col-num="6" isrequired="true" hideremoveicon>
+                                                                    customlabel="Child" normal-col-num="6" isrequired="true" ismultipleselection hideremoveicon>
                             </vr-genericdata-businessentity-selector>
                         </span>
                     </vr-row>
@@ -28,9 +27,13 @@
                             <vr-datetimepicker type="dateTime" value="scopeModel.endEffectiveDate" label="EED" customvalidate="scopeModel.validateEffectiveDate()"></vr-datetimepicker>
                         </vr-columns>
                     </vr-row>
+                    <vr-row>
+                        <vr-columns width="fullrow" ng-if="scopeModel.errorMessage != undefined">
+                            <label class="label label-danger" style="font-size:9pt;">{{scopeModel.errorMessage}}</label>
+                        </vr-columns>
+                    </vr-row>
                 </vr-tab>
             </vr-tabs>
-
         </vr-form>
     </vr-modalbody>
     <div>
