Adding OnlyRootAccount @AccountManagement Adding SplitRangeIntoSeparateDIDs @DIDEditor
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42652

--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/Account/Templates/AccountGridTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/Account/Templates/AccountGridTemplate.html
@@ -1,6 +1,4 @@
-﻿
-
-<vr-datagrid on-ready="scopeModel.onGridReady"
+﻿<vr-datagrid on-ready="scopeModel.onGridReady"
              datasource="scopeModel.accounts"
              dataretrievalfunction="scopeModel.dataRetrievalFunction"
              pagingtype="'Pager'"
