--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Views/Account/AccountManagement.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Views/Account/AccountManagement.html
@@ -19,8 +19,11 @@
                 <vr-columns ng-show="scopeModel.isAccountBEDefinitionSelected" width="normal">
                     <vr-textbox label="Name" value="scopeModel.name"></vr-textbox>
                 </vr-columns>
-                <retail-be-accounttype-selector on-ready="scopeModel.onAccountTypeSelectorReady" normal-col-num="2"
-                                                ng-show="scopeModel.isAccountBEDefinitionSelected" ismultipleselection="true">
+                <vr-columns ng-show="scopeModel.isAccountBEDefinitionSelected" width="small">
+                    <vr-switch value="scopeModel.onlyRootAccount" onvaluechanged="scopeModel.onlyRootAccountValueChanged" label="Only Root Account"></vr-switch>
+                </vr-columns>
+                <retail-be-accounttype-selector on-ready="scopeModel.onAccountTypeSelectorReady" ng-show="scopeModel.isAccountBEDefinitionSelected"
+                                                vr-loader="scopeModel.isAccountTypeSelectorLoading" normal-col-num="2" ismultipleselection="true">
                 </retail-be-accounttype-selector>
             </vr-row>
             <vr-row ng-show="advancedSelected && scopeModel.isAccountBEDefinitionSelected" removeline>
