--- a/Vanrise/Code/Vanrise.Rules.Web/VR_Rules/Directives/NormalizationRule/Templates/AddPrefixDirectiveTemplate.html
+++ b/Vanrise/Code/Vanrise.Rules.Web/VR_Rules/Directives/NormalizationRule/Templates/AddPrefixDirectiveTemplate.html
@@ -1,6 +1,3 @@
 ﻿<vr-columns width="1/2row">
-     <vr-textbox value="ctrl.numberPrefix" isrequired></vr-textbox>
- </vr-columns>
-
-
-
+    <vr-textbox value="ctrl.numberPrefix" label="Prefix" isrequired></vr-textbox>
+</vr-columns>
