Refactor UI layout
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42688

--- a/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/GenericRule/Templates/GenericRuleManagementTemplate.html
+++ b/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/GenericRule/Templates/GenericRuleManagementTemplate.html
@@ -1,23 +1,26 @@
 ﻿<div ng-hide="filterSectionCollapsed">
     <vr-row removeline>
-        <vr-columns width="normal" ng-show="scopeModel.ruleDefinition">
-            <vr-datetimepicker label="Effective Date" value="scopeModel.effectiveDate" type="longDateTime"></vr-datetimepicker>
-        </vr-columns>
-        <vr-columns width="normal">
-            <vr-textbox label="Description" value="scopeModel.description"></vr-textbox>
-        </vr-columns>
-        <vr-directivewrapper directive="scopeModel.settingsFilterEditor" on-ready="scopeModel.onSettingsFilterDirectiveReady" normal-col-num="2"></vr-directivewrapper>
-        <span ng-repeat="filter in scopeModel.filters">
-            <vr-directivewrapper ng-show="filter.showInBasicSearch" directive="filter.directiveEditor" on-ready="filter.onDirectiveReady" normal-col-num="2"></vr-directivewrapper>
-        </span>
-        <!--<span ng-show="advancedSelected">
-            <vr-directivewrapper directive="scopeModel.settingsFilterEditor" on-ready="onSettingsFilterDirectiveReady" normal-col-num="2"></vr-directivewrapper>
-        </span>-->
-        <vr-columns colnum="1" withemptyline haschildcolumns>
-            <vr-button type="Search" standalone data-onclick="scopeModel.searchClicked"></vr-button>
-            <vr-button type="Add" standalone data-onclick="scopeModel.addGenericRule" ng-show="scopeModel.hasAddRulePermission"></vr-button>
+        <vr-columns colnum="10" haschildcolumns>
+            <vr-columns colnum="3" ng-show="scopeModel.ruleDefinition">
+                <vr-datetimepicker label="Effective Date" value="scopeModel.effectiveDate" type="longDateTime"></vr-datetimepicker>
+            </vr-columns>
+            <vr-columns colnum="3">
+                <vr-textbox label="Description" value="scopeModel.description"></vr-textbox>
+            </vr-columns>
+            <vr-directivewrapper directive="scopeModel.settingsFilterEditor" on-ready="scopeModel.onSettingsFilterDirectiveReady" normal-col-num="3"></vr-directivewrapper>
+            <span ng-repeat="filter in scopeModel.filters">
+                <vr-directivewrapper ng-show="filter.showInBasicSearch" directive="filter.directiveEditor" on-ready="filter.onDirectiveReady" normal-col-num="3"></vr-directivewrapper>
+            </span>
+            <!--<span ng-show="advancedSelected">
+                <vr-directivewrapper directive="scopeModel.settingsFilterEditor" on-ready="onSettingsFilterDirectiveReady" normal-col-num="2"></vr-directivewrapper>
+            </span>-->
+            <vr-columns colnum="1" withemptyline haschildcolumns>
+                <vr-button type="Search" standalone data-onclick="scopeModel.searchClicked"></vr-button>
+                <vr-button type="Add" standalone data-onclick="scopeModel.addGenericRule" ng-show="scopeModel.hasAddRulePermission"></vr-button>
+            </vr-columns>
         </vr-columns>
     </vr-row>
+    <span>{{scopeModel.settingsFilterEditor}}</span>
 </div>
 <vr-row removeline>
     <vr-columns width="fullrow">
