--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountDefinition/Templates/AccountBEDefinitionEditorTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountDefinition/Templates/AccountBEDefinitionEditorTemplate.html
@@ -9,6 +9,9 @@
             <vr-switch value="scopeModel.useRemoteSelector" label="Use Remote Selector"></vr-switch>
         </vr-columns>
     </vr-row>
+    <vr-row>
+        <retail-be-accounttype-selector on-ready="scopeModel.onAccountTypeSelectorReady" normal-col-num="6"></retail-be-accounttype-selector>
+    </vr-row>
     <retail-be-accountbedefinition-financialaccountlocator on-ready="scopeModel.onFinancialAccountLocatorReady"
                                                            normal-col-num="6" isrequired="true">
     </retail-be-accountbedefinition-financialaccountlocator>
