--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountDefinition/Templates/AccountBEDefinitionEditorTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountDefinition/Templates/AccountBEDefinitionEditorTemplate.html
@@ -10,7 +10,7 @@
         </vr-columns>
     </vr-row>
     <vr-row>
-        <retail-be-accounttype-selector on-ready="scopeModel.onAccountTypeSelectorReady" normal-col-num="6"></retail-be-accounttype-selector>
+        <retail-be-accounttype-selector on-ready="scopeModel.onAccountTypeSelectorReady" normal-col-num="6" customlabel="Local Service Account Type"></retail-be-accounttype-selector>
     </vr-row>
     <retail-be-accountbedefinition-financialaccountlocator on-ready="scopeModel.onFinancialAccountLocatorReady"
                                                            normal-col-num="6" isrequired="true">
