update header name from StrategyExecutionId to Id
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42709

--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/SuspiciousAnalysis/SuspiciousNumberDetails.html
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/SuspiciousAnalysis/SuspiciousNumberDetails.html
@@ -33,7 +33,7 @@
                                      pagingtype="'PagingOnScroll'"
                                      maxheight="150px"
                                      idfield="DetialID">
-                            <vr-datagridcolumn headertext="'Strategy Execution Id'" field="'StrategyExecutionId'" type="'Text'"></vr-datagridcolumn>
+                            <vr-datagridcolumn headertext="'Id'" field="'StrategyExecutionId'" type="'Text'"></vr-datagridcolumn>
                             <vr-datagridcolumn headertext="'Suspicion Level'" field="'SuspicionLevelDescription'" type="'Text'" getcolor="getSuspicionLevelColor"></vr-datagridcolumn>
                             <vr-datagridcolumn headertext="'Strategy'" field="'StrategyName'" type="'Text'"></vr-datagridcolumn>
                             <vr-datagridcolumn headertext="'From Time'" field="'FromDate'" type="'Datetime'"></vr-datagridcolumn>
