overide  drag-drop item backgroundColor following the them
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42727

--- a/Vanrise/Code/Vanrise.Web/Client/Themes/theme.css
+++ b/Vanrise/Code/Vanrise.Web/Client/Themes/theme.css
@@ -307,4 +307,9 @@ f79624
     color: #FFF;
     border-bottom:0px;
 }
+.vr-toolbox .item{   
+    background-color: #01a082 !important;
+}
 /* override style.css*/
+
+
