--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SalePriceList/SalePricelistManagement.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SalePriceList/SalePricelistManagement.html
@@ -13,6 +13,10 @@
                 <vr-columns width="normal">
                     <vr-datetimepicker type="date" label="Creation Date" value="CreationDate"></vr-datetimepicker>
                 </vr-columns>
+                <vr-whs-be-salepricelisttype-selector on-ready="onSalePricelistTypeSelectorReady"
+                                                      normal-col-num="2"
+                                                      ismultipleselection="true"
+                                                      selectedvalues="selectedPricelistType"></vr-whs-be-salepricelisttype-selector>
             </vr-row>
         </div>
         <vr-row removeline>
