Implementing IsInvoiceActive and IsAccountBalanceActive and adding exclude usage from statment
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42732

--- a/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/MainExtensions/Account/Templates/VRAccountTypeSettings.html
+++ b/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/MainExtensions/Account/Templates/VRAccountTypeSettings.html
@@ -20,6 +20,9 @@
             <vr-columns width="1/2row">
                 <vr-switch label="Group Usages by Transaction Type" value="scopeModel.shouldGroupUsagesByTransactionType"></vr-switch>
             </vr-columns>
+            <vr-columns width="1/2row">
+                <vr-switch label="Exclude Usage From Statement" value="scopeModel.excludeUsageFromStatement"></vr-switch>
+            </vr-columns>
         </vr-row>
     </vr-tab>
     <vr-tab header="'Relation Type'">
