--- a/Vanrise/Code/Vanrise.Common.Web/Common/Views/StatusDefinition/StatusDefinitionEditor.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Views/StatusDefinition/StatusDefinitionEditor.html
@@ -19,11 +19,19 @@
                         <vr-columns width="1/4row">
                             <vr-switch label="Active" value="scopeModel.isActive"></vr-switch>
                         </vr-columns>
+                    </vr-row>
+                    <vr-row>
                         <vr-columns width="1/4row">
-                            <vr-switch label="Has Initial Charge" value="scopeModel.HasInitialCharge"></vr-switch>
+                            <vr-switch label="Invoice Active" value="scopeModel.isInvoiceActive"></vr-switch>
+                        </vr-columns>
+                        <vr-columns width="1/4row">
+                            <vr-switch label="Account Balance Active" value="scopeModel.isAccountBalanceActive"></vr-switch>
                         </vr-columns>
                     </vr-row>
                     <vr-row>
+                        <vr-columns width="1/4row">
+                            <vr-switch label="Has Initial Charge" value="scopeModel.HasInitialCharge"></vr-switch>
+                        </vr-columns>
                         <vr-columns width="1/4row">
                             <vr-switch label="Has Recurring Charge" value="scopeModel.HasRecurringCharge"></vr-switch>
                         </vr-columns>
