MultiNet new requirements implementation
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42734

--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/MainExtensions/AccountType/Part/Runtime/Templates/AccountTypeCompanyProfilePartRuntimeTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/MainExtensions/AccountType/Part/Runtime/Templates/AccountTypeCompanyProfilePartRuntimeTemplate.html
@@ -66,5 +66,9 @@
             <vr-label>Email</vr-label>
             <vr-textbox value="c.email" type="c.inputetype"></vr-textbox>
         </vr-columns>
+        <vr-columns width="1/2row">
+            <vr-label>Notes</vr-label>
+            <vr-textarea value="c.notes" ></vr-textarea>
+        </vr-columns>
     </vr-section>
 </vr-tab>
