--- a/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Directives/Account/Part/Runtime/Templates/AccountTypePartBranchExtendedInfoRuntimeTemplate.html
+++ b/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Directives/Account/Part/Runtime/Templates/AccountTypePartBranchExtendedInfoRuntimeTemplate.html
@@ -1,6 +1,9 @@
 ﻿<vr-tab header="'More Info'">
     <vr-row removeline>
         <vr-columns width="1/2row">
+            <retail-multinet-accounttype-selector on-ready="scopeModel.onAccountTypeSelectorReady"></retail-multinet-accounttype-selector>
+        </vr-columns>
+        <vr-columns width="1/2row">
             <vr-textbox value="scopeModel.branchCode" label="Branch Code"></vr-textbox>
         </vr-columns>
         <vr-columns width="1/2row">
@@ -38,6 +41,9 @@
         </vr-columns>
         <vr-columns width="1/2row">
             <vr-textbox value="scopeModel.homeAddress" label="Home Address"></vr-textbox>
+        </vr-columns>
+        <vr-columns width="1/2row">
+            <vr-datetimepicker type="date"  value="scopeModel.cNICExpiryDate" label="CNIC Expiry Date"></vr-datetimepicker>
         </vr-columns>
     </vr-row>
 </vr-tab>
