--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/SupplierTargetMatch/Templates/SupplierTargetMatchFilterTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/SupplierTargetMatch/Templates/SupplierTargetMatchFilterTemplate.html
@@ -1,64 +1,66 @@
-﻿<vr-columns width="fullrow">
-    <vr-tabs>
-        <vr-tab header="'Filter'">
-            <vr-row>
-                <vr-whs-be-sellingnumberplan-selector normal-col-num="6"
-                                                      on-ready="scopeModel.onSellingNumberPlansDirectiveReady"
-                                                      isrequired="true">
-                </vr-whs-be-sellingnumberplan-selector>
-
-                <vr-whs-be-routingproduct-selector normal-col-num="2"
-                                                   on-ready="scopeModel.onRoutingProductSelectorReady"
-                                                   hideselectedvaluessection />
-
-
+﻿
+<vr-tabs>
+    <vr-tab header="'Filter'">
+        <vr-row>
+            <vr-whs-be-sellingnumberplan-selector normal-col-num="2"
+                                                  on-ready="scopeModel.onSellingNumberPlansDirectiveReady"
+                                                  isrequired="true">
+            </vr-whs-be-sellingnumberplan-selector>
+            <vr-columns colnum="2">
+                <vr-whs-be-routingproduct-selector on-ready="scopeModel.onRoutingProductSelectorReady"
+                                                   hideselectedvaluessection
+                                                   isrequired />
+            </vr-columns>
+            <vr-columns colnum="2">
                 <vr-whs-routing-routingdatabase-selector on-ready="scopeModel.onDatabaseSelectorReady"
                                                          getroutingproductroutes
                                                          onselectionchanged="scopeModel.onRoutingDatabaseChanged"
                                                          isrequired
-                                                         normal-col-num="2"
                                                          hideremoveicon>
                 </vr-whs-routing-routingdatabase-selector>
-
-                <vr-common-country-selector on-ready="scopeModel.onCountryDirectiveReady"
-                                            normal-col-num="2"></vr-common-country-selector>
-
-
+            </vr-columns>
+            <vr-columns colnum="2">
                 <vr-whs-routing-rproutepolicy-selector on-ready="scopeModel.onPolicySelectorReady"
-                                                       normal-col-num="2"
                                                        isrequired></vr-whs-routing-rproutepolicy-selector>
-                <vr-columns colnum="2">
-                    <vr-textbox type="number" label="Number of Options" value="scopeModel.numberOfOptions" minvalue="1" isrequired></vr-textbox>
-                </vr-columns>
-                <vr-columns width="1/2row">
-                    <vr-datetimepicker value="scopeModel.from" type="date" label="BED" isrequired></vr-datetimepicker>
-                </vr-columns>
-                <vr-columns width="1/2row">
-                    <vr-datetimepicker value="scopeModel.to" type="date" label="EED"></vr-datetimepicker>
-                </vr-columns>
-            </vr-row>
-        </vr-tab>
-        <vr-tab header="'Target Settings'">
-            <vr-row>
-                <vr-columns width="1/2row">
-                </vr-columns>
-            </vr-row>
-        </vr-tab>
-        <vr-tab header="'Export Settings'">
-            <vr-row>
-                <vr-columns colnum="2">
-                    <vr-textbox type="number" label="Default Volume" value="scopeModel.defaultVolume" isrequired></vr-textbox>
-                </vr-columns>
-                <vr-columns colnum="2">
-                    <vr-textbox type="number" label="Default ASR" value="scopeModel.defaultASR" isrequired></vr-textbox>
-                </vr-columns>
-                <vr-columns colnum="2">
-                    <vr-textbox type="number" label="Default ACD" value="scopeModel.defaultACD" isrequired></vr-textbox>
-                </vr-columns>
-                <vr-columns colnum="2">
-                    <vr-switch value="scopeModel.withACD_ASR" label="With ACD and ASR"></vr-switch>
-                </vr-columns>
-            </vr-row>
-        </vr-tab>
-    </vr-tabs>
-</vr-columns>
+            </vr-columns>
+            <vr-columns colnum="2">
+                <vr-common-country-selector on-ready="scopeModel.onCountryDirectiveReady"
+                                            ismultipleselection></vr-common-country-selector>
+
+            </vr-columns>
+
+            <vr-columns colnum="2">
+                <vr-textbox type="number" label="Number of Options" value="scopeModel.numberOfOptions" minvalue="1" isrequired></vr-textbox>
+            </vr-columns>
+            <vr-columns colnum="2">
+                <vr-datetimepicker value="scopeModel.from" type="date" label="BED" isrequired></vr-datetimepicker>
+            </vr-columns>
+            <vr-columns colnum="2">
+                <vr-datetimepicker value="scopeModel.to" type="date" label="EED"></vr-datetimepicker>
+            </vr-columns>
+        </vr-row>
+    </vr-tab>
+    <vr-tab header="'Target Settings'">
+        <vr-row>
+            <vr-columns width="1/2row">
+                <vr-whs-sales-suppliertargetmatchmethods-selective on-ready="scopeModel.onCalculationMethodDirectiveReady"></vr-whs-sales-suppliertargetmatchmethods-selective>
+            </vr-columns>
+        </vr-row>
+    </vr-tab>
+    <vr-tab header="'Export Settings'">
+        <vr-row>
+            <vr-columns colnum="2">
+                <vr-textbox type="number" label="Default Volume" value="scopeModel.defaultVolume" isrequired></vr-textbox>
+            </vr-columns>
+            <vr-columns colnum="2">
+                <vr-textbox type="number" label="Default ASR" value="scopeModel.defaultASR" isrequired></vr-textbox>
+            </vr-columns>
+            <vr-columns colnum="2">
+                <vr-textbox type="number" label="Default ACD" value="scopeModel.defaultACD" isrequired></vr-textbox>
+            </vr-columns>
+            <vr-columns colnum="2">
+                <vr-switch value="scopeModel.withACD_ASR" label="With ACD and ASR"></vr-switch>
+            </vr-columns>
+        </vr-row>
+    </vr-tab>
+</vr-tabs>
