Implementing package assignable
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42742

--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountDefinition/Templates/AccountBEDefinitionEditorTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountDefinition/Templates/AccountBEDefinitionEditorTemplate.html
@@ -33,6 +33,12 @@
 <vr-tab header="'Actions'">
     <retail-be-accountactiondefinitions-management on-ready="scopeModel.onAccountActionDefinitionsReady" isrequired="true" normal-col-num="6"></retail-be-accountactiondefinitions-management>
 </vr-tab>
+<vr-tab header="'Package Assignment'">
+    <retail-be-accountcondition-selective on-ready="scopeModel.onPackageAssignmentConditionReady" normal-col-num="6"></retail-be-accountcondition-selective>
+</vr-tab>
+
+
+
 <vr-tab header="'Security'">
     <retail-be-accountsecuritydefinition-management on-ready="scopeModel.onAccountSecurityDefinitionsReady" isrequired="true" normal-col-num="6"></retail-be-accountsecuritydefinition-management>
 </vr-tab>
