--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Views/AccountPackage/PackageAssignmentEditor.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Views/AccountPackage/PackageAssignmentEditor.html
@@ -14,10 +14,10 @@
                     <vr-validator validate="scopeModel.validateTimeRange()">
                         <vr-row>
                             <vr-columns width="1/2row">
-                                <vr-datetimepicker label="Begin Effective Date" value="scopeModel.bed" type="dateTime"></vr-datetimepicker>
+                                <vr-datetimepicker label="Begin Effective Date" value="scopeModel.bed" type="date"></vr-datetimepicker>
                             </vr-columns>
                             <vr-columns width="1/2row">
-                                <vr-datetimepicker label="End Effective Date" value="scopeModel.eed" type="dateTime"></vr-datetimepicker>
+                                <vr-datetimepicker label="End Effective Date" value="scopeModel.eed" type="date"></vr-datetimepicker>
                             </vr-columns>
                         </vr-row>
                     </vr-validator>
