Implementing UseFinancialAccountModule and add new project for api entities
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42754

--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountDefinition/Templates/AccountBEDefinitionEditorTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/AccountDefinition/Templates/AccountBEDefinitionEditorTemplate.html
@@ -11,6 +11,9 @@
     </vr-row>
     <vr-row>
         <retail-be-accounttype-selector on-ready="scopeModel.onAccountTypeSelectorReady" normal-col-num="6" customlabel="Local Service Account Type"></retail-be-accounttype-selector>
+        <vr-columns width="1/2row">
+            <vr-switch value="scopeModel.useFinancialAccountModule" label="Use Financial Account Module"></vr-switch>
+        </vr-columns>
     </vr-row>
     <retail-be-accountbedefinition-financialaccountlocator on-ready="scopeModel.onFinancialAccountLocatorReady"
                                                            normal-col-num="6" isrequired="true">
